--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,9 @@
 </head>
 
 <body>
-    <h1>Hello Static HTML!</h1>
-    <a href="/page.html">Link to my other page</a>
-    <img src="/static/tail.png" alt="code"/>
+    @@include('./partials/header.html')
+    @@include('./partials/mainbanner.html')
+    <h1>Hello Static fwfaw!</h1>
+    @@include('./partials/footer.html')
 </body>
+<script src="./app.bundle.js"></script>
